ReactJsCompiler/src/Grammar/ReactParser.java
// Generated from /home/ghram/Downloads/ReactJsCompiler/src/Grammar/ReactParser.g4 by ANTLR 4.13.1
package Grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ReactParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OpenBracket=1, CloseBracket=2, OpenParen=3, CloseParen=4, OpenBrace=5, 
		CloseBrace=6, SemiColon=7, Comma=8, Assign=9, Not=10, QuestionMark=11, 
		Colon=12, Dot=13, SingleCotation=14, DoubleCotation=15, Plus=16, Minus=17, 
		Multiply=18, Divide=19, Modulus=20, Increment=21, Decrement=22, Assign_Plus=23, 
		Assign_Minus=24, Assign_Multiply=25, Assign_Divide=26, LessThan=27, MoreThan=28, 
		LessThanEquals=29, GreaterThanEquals=30, Equals_=31, NotEquals=32, IdentityEquals=33, 
		IdentityNotEquals=34, And=35, Or=36, ARROW=37, Do=38, While=39, If=40, 
		Elseif=41, Else=42, Void=43, Return=44, For=45, Switch=46, Case=47, Break=48, 
		Continue=49, Var=50, Let=51, Const=52, Function=53, This=54, Default=55, 
		In=56, Import=57, Export=58, From=59, Map=60, Console=61, Log=62, Div=63, 
		P=64, H1=65, H2=66, H3=67, H4=68, H5=69, H6=70, Button=71, Img=72, Usestate=73, 
		Useeffect=74, Useref=75, Set=76, NullLiteral=77, BooleanLiteral=78, StringLiteral=79, 
		CharLiteral=80, IntLiteral=81, FloatLiteral=82, Identifier=83, WS=84, 
		MultiLineComment=85, SingleLineComment=86;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_importStatment = 2, RULE_importBody = 3, 
		RULE_singleHookImport = 4, RULE_componentStatment = 5, RULE_componentBody = 6, 
		RULE_returnBody = 7, RULE_jsxElement = 8, RULE_htmlTag = 9, RULE_htmlAttribute = 10, 
		RULE_htmlContent = 11, RULE_variableDeclaration = 12, RULE_arrayDeclaration = 13, 
		RULE_arrayContent = 14, RULE_arrayElement = 15, RULE_functionDeclaration = 16, 
		RULE_functionReturn = 17, RULE_parameters = 18, RULE_hooksDeclaration = 19, 
		RULE_hooksReturn = 20, RULE_expression = 21, RULE_functionCall = 22, RULE_ifStatement = 23, 
		RULE_whileStatement = 24, RULE_doWhileStatement = 25, RULE_forStatement = 26, 
		RULE_switchStatement = 27, RULE_switchBlock = 28, RULE_caseBlock = 29, 
		RULE_defaultBlock = 30, RULE_type = 31, RULE_initial = 32, RULE_stringLiteral = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "importStatment", "importBody", "singleHookImport", 
			"componentStatment", "componentBody", "returnBody", "jsxElement", "htmlTag", 
			"htmlAttribute", "htmlContent", "variableDeclaration", "arrayDeclaration", 
			"arrayContent", "arrayElement", "functionDeclaration", "functionReturn", 
			"parameters", "hooksDeclaration", "hooksReturn", "expression", "functionCall", 
			"ifStatement", "whileStatement", "doWhileStatement", "forStatement", 
			"switchStatement", "switchBlock", "caseBlock", "defaultBlock", "type", 
			"initial", "stringLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "','", "'='", 
			"'!'", "'?'", "':'", "'.'", "'''", "'\"'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'<'", "'>'", 
			"'<='", "'>='", "'=='", "'!='", "'==='", "'!=='", "'&&'", "'||'", "'=>'", 
			"'do'", "'while'", "'if'", "'elseif'", "'else'", "'void'", "'return'", 
			"'for'", "'switch'", "'case'", "'break'", "'continue'", "'var'", "'let'", 
			"'const'", "'function'", "'this'", "'default'", "'in'", "'import'", "'export'", 
			"'from'", "'map'", "'console'", "'log'", "'div'", "'p'", "'h1'", "'h2'", 
			"'h3'", "'h4'", "'h5'", "'h6'", "'button'", "'img'", "'useState'", "'useEffect'", 
			"'useRef'", "'set'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace", 
			"CloseBrace", "SemiColon", "Comma", "Assign", "Not", "QuestionMark", 
			"Colon", "Dot", "SingleCotation", "DoubleCotation", "Plus", "Minus", 
			"Multiply", "Divide", "Modulus", "Increment", "Decrement", "Assign_Plus", 
			"Assign_Minus", "Assign_Multiply", "Assign_Divide", "LessThan", "MoreThan", 
			"LessThanEquals", "GreaterThanEquals", "Equals_", "NotEquals", "IdentityEquals", 
			"IdentityNotEquals", "And", "Or", "ARROW", "Do", "While", "If", "Elseif", 
			"Else", "Void", "Return", "For", "Switch", "Case", "Break", "Continue", 
			"Var", "Let", "Const", "Function", "This", "Default", "In", "Import", 
			"Export", "From", "Map", "Console", "Log", "Div", "P", "H1", "H2", "H3", 
			"H4", "H5", "H6", "Button", "Img", "Usestate", "Useeffect", "Useref", 
			"Set", "NullLiteral", "BooleanLiteral", "StringLiteral", "CharLiteral", 
			"IntLiteral", "FloatLiteral", "Identifier", "WS", "MultiLineComment", 
			"SingleLineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ReactParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReactParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ReactParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(68);
				statement();
				}
				}
				setState(71); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 441352763482308608L) != 0) );
			setState(73);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStateContext extends StatementContext {
		public ImportStatmentContext importStatment() {
			return getRuleContext(ImportStatmentContext.class,0);
		}
		public ImportStateContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterImportState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitImportState(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitImportState(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComponentStateContext extends StatementContext {
		public ComponentStatmentContext componentStatment() {
			return getRuleContext(ComponentStatmentContext.class,0);
		}
		public ComponentStateContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterComponentState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitComponentState(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitComponentState(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Import:
				_localctx = new ImportStateContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				importStatment();
				}
				break;
			case Function:
			case Export:
				_localctx = new ComponentStateContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				componentStatment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatmentContext extends ParserRuleContext {
		public TerminalNode Import() { return getToken(ReactParser.Import, 0); }
		public List<ImportBodyContext> importBody() {
			return getRuleContexts(ImportBodyContext.class);
		}
		public ImportBodyContext importBody(int i) {
			return getRuleContext(ImportBodyContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(ReactParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(ReactParser.Comma, i);
		}
		public TerminalNode SemiColon() { return getToken(ReactParser.SemiColon, 0); }
		public ImportStatmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterImportStatment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitImportStatment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitImportStatment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatmentContext importStatment() throws RecognitionException {
		ImportStatmentContext _localctx = new ImportStatmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStatment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(Import);
			setState(80);
			importBody();
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(81);
				match(Comma);
				setState(82);
				importBody();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SemiColon) {
				{
				setState(88);
				match(SemiColon);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportBodyContext extends ParserRuleContext {
		public ImportBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importBody; }
	 
		public ImportBodyContext() { }
		public void copyFrom(ImportBodyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HooksImportContext extends ImportBodyContext {
		public TerminalNode OpenBrace() { return getToken(ReactParser.OpenBrace, 0); }
		public List<SingleHookImportContext> singleHookImport() {
			return getRuleContexts(SingleHookImportContext.class);
		}
		public SingleHookImportContext singleHookImport(int i) {
			return getRuleContext(SingleHookImportContext.class,i);
		}
		public TerminalNode CloseBrace() { return getToken(ReactParser.CloseBrace, 0); }
		public TerminalNode From() { return getToken(ReactParser.From, 0); }
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public List<TerminalNode> Comma() { return getTokens(ReactParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(ReactParser.Comma, i);
		}
		public HooksImportContext(ImportBodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterHooksImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitHooksImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitHooksImport(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LibraryImportContext extends ImportBodyContext {
		public TerminalNode Identifier() { return getToken(ReactParser.Identifier, 0); }
		public TerminalNode From() { return getToken(ReactParser.From, 0); }
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public LibraryImportContext(ImportBodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterLibraryImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitLibraryImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitLibraryImport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportBodyContext importBody() throws RecognitionException {
		ImportBodyContext _localctx = new ImportBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importBody);
		int _la;
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new LibraryImportContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				match(Identifier);
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==From) {
					{
					setState(92);
					match(From);
					}
				}

				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((((_la - 79)) & ~0x3f) == 0 && ((1L << (_la - 79)) & 19L) != 0)) {
					{
					setState(95);
					stringLiteral();
					}
				}

				}
				break;
			case 2:
				_localctx = new HooksImportContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				match(OpenBrace);
				setState(99);
				singleHookImport();
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(100);
					match(Comma);
					setState(101);
					singleHookImport();
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(107);
				match(CloseBrace);
				setState(108);
				match(From);
				setState(109);
				stringLiteral();
				}
				break;
			case 3:
				_localctx = new LibraryImportContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				stringLiteral();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SingleHookImportContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(ReactParser.Identifier, 0); }
		public TerminalNode Usestate() { return getToken(ReactParser.Usestate, 0); }
		public TerminalNode Useref() { return getToken(ReactParser.Useref, 0); }
		public TerminalNode Useeffect() { return getToken(ReactParser.Useeffect, 0); }
		public SingleHookImportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleHookImport; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterSingleHookImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitSingleHookImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitSingleHookImport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleHookImportContext singleHookImport() throws RecognitionException {
		SingleHookImportContext _localctx = new SingleHookImportContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_singleHookImport);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_la = _input.LA(1);
			if ( !(((((_la - 73)) & ~0x3f) == 0 && ((1L << (_la - 73)) & 1031L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentStatmentContext extends ParserRuleContext {
		public TerminalNode Function() { return getToken(ReactParser.Function, 0); }
		public TerminalNode Identifier() { return getToken(ReactParser.Identifier, 0); }
		public TerminalNode OpenParen() { return getToken(ReactParser.OpenParen, 0); }
		public TerminalNode CloseParen() { return getToken(ReactParser.CloseParen, 0); }
		public TerminalNode OpenBrace() { return getToken(ReactParser.OpenBrace, 0); }
		public ReturnBodyContext returnBody() {
			return getRuleContext(ReturnBodyContext.class,0);
		}
		public TerminalNode CloseBrace() { return getToken(ReactParser.CloseBrace, 0); }
		public TerminalNode Export() { return getToken(ReactParser.Export, 0); }
		public TerminalNode Default() { return getToken(ReactParser.Default, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public List<ComponentBodyContext> componentBody() {
			return getRuleContexts(ComponentBodyContext.class);
		}
		public ComponentBodyContext componentBody(int i) {
			return getRuleContext(ComponentBodyContext.class,i);
		}
		public ComponentStatmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentStatment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterComponentStatment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitComponentStatment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitComponentStatment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentStatmentContext componentStatment() throws RecognitionException {
		ComponentStatmentContext _localctx = new ComponentStatmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_componentStatment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Export) {
				{
				setState(116);
				match(Export);
				setState(117);
				match(Default);
				}
			}

			setState(120);
			match(Function);
			setState(121);
			match(Identifier);
			setState(122);
			match(OpenParen);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OpenBrace || _la==Identifier) {
				{
				setState(123);
				parameters();
				}
			}

			setState(126);
			match(CloseParen);
			setState(127);
			match(OpenBrace);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 16995975864254472L) != 0) || _la==Useeffect || _la==Identifier) {
				{
				{
				setState(128);
				componentBody();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			returnBody();
			setState(135);
			match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
